# copado-hx

./: .copado-hx.json.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
copado_hx/: __main__.py  cli.py
copado_hx/api/: __init__.py  actions.py  ai.py  base.py  cicd.py  crt.py  sf_rest.py
copado_hx/auth/: salesforce.py
copado_hx/skills/: mcp_server.py
copado_hx/utils/: config.py  output.py  storage.py
demo/: DECK.md  LIVE_DEMO_JAM.md  SUBMISSION_CHECKLIST.md  VIDEO_SCRIPT.md  copado-hx-deck.pptx  demo-recording.cast  record-demo.sh
scripts/: git-push-safe.sh
tests/: test_core.py
