[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copado-hx"
version = "1.0.0"
description = "Copado Headless Developer CLI — Full Salesforce DevOps from the terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "keyring>=25.0",
    "cryptography>=41.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
copado-hx = "copado_hx.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["copado_hx*"]

[tool.pytest.ini_options]
required_plugins = ""
testpaths = ["tests"]
python_files = ["test_*.py"]
